<resources>
    <string name="app_name">Oving_2, Lars-Håvard</string>
    <string name="Øving_2">Øving 2, Lars-Håvard</string>
    <string name="Generate_number">Generate number</string>
    <string name="number">Number</string>
    <string name="Add">Add</string>
    <string name="Multiply">Multiply</string>
    <string name="answer">Answer:</string>
    <string name="Upper_limit">Upper limit:</string>
    <string name="Correct">Correct!</string>
    <string name="Wrong">Wrong! The correct answer is:</string>
    <string name="number_2">Number 2</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="number_1">Number 1</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_8">8</string>
    <string name="_10">10</string>
</resources>